[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -1,2 +1,19 @@
 <html>
+    <head>
+        <title>
+            article-one hurray..........
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">home</a>
+        </div>
+        </hr>
+        <div>
+            welcome guys to  make your dreams true
+        </div>
+        <div>
+            all the best
+        </div>
+    </body>
 </html>
