[imad-console] Updates article-two.html

--- a/article-two.html
+++ b/article-two.html
@@ -9,6 +9,9 @@
             <a href="/">home</a>
         </div>
         <hr/>
+        <marquee>
+            hello!
+        </marquee>
         <div>
             welcome guys to  make your dreams true
         </div>
